ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: my-service
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`mon-service.local`)
      kind: Rule
      services:
        - name: mon-service
          port: 80
  tls:
    certResolver: myresolver
