ollama-deployment.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: ollama
  namespace: ollama
spec:
  selector:
    matchLabels:
      app: ollama
  template:
    metadata:
      labels:
        app: ollama
    spec:
      containers:
      - name: ollama
        image: ollama/ollama:latest
        ports:
        - containerPort: 11434
          name: ollama
        command:
          - "/bin/sh"
          - "-c"
          - |
              OLLAMA_KEEP_ALIVE=-1 &&
              /bin/ollama serve & 
              sleep 5
              ollama pull llama3.3:70b
              wait $!
        resources:
          limits:
            nvidia.com/gpu: 3  # Demande 4 GPU
        readinessProbe:
          httpGet:
            path: /
            port: 11434
          initialDelaySeconds: 300
          periodSeconds: 10
          failureThreshold: 3
        volumeMounts:
          - mountPath: /root/.ollama/models  # Le chemin où le volume sera monté dans le conteneur
            name: mon-volume
            readOnly: false
      runtimeClassName: nvidia
      volumes:
        - name: mon-volume
          hostPath:
            path: /home/tmp  # Chemin sur l'hôte
            type: Directory  # Type de volume, ici un répertoire
---
apiVersion: v1
kind: Service
metadata:
  name: ollama
  namespace: ollama
spec:
  selector:
    app: ollama
  ports:
    - protocol: TCP
      port: 11434
      targetPort: 11434

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ollama-ingress
  namespace: ollama
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: cluster.ai.api.snsolutions.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ollama
            port:
              number: 11434
