whisper-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper
  namespace: whisper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: whisper
  template:
    metadata:
      labels:
        app: whisper
    spec:
      containers:
      - name: whisper
        image: ghcr.io/luucfr/whisper-backend/whisper:k3s
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
          name: whisper
        resources:
          limits:
            nvidia.com/gpu: 1
        readinessProbe:
          httpGet:
            path: /health
            port: 8000
          initialDelaySeconds: 10
          periodSeconds: 10
          failureThreshold: 3
      runtimeClassName: nvidia
      imagePullSecrets:
      - name: ghcr-secret
      
---
apiVersion: v1
kind: Service
metadata:
  name: whisper
  namespace: whisper
spec:
  selector:
    app: whisper
  ports:
  - protocol: TCP
    port: 8000
    targetPort: 8000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisper-ingress
  namespace: whisper
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: sns-ia-02.goat-woodpecker.ts.net
    http:
      paths:
      - path: /whisper/
        pathType: Prefix
        backend:
          service:
            name: whisper
            port:
              number: 8000
